--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/clock2.svg" />
-  <link rel="preload" href="/public/fonts/MaterialSymbolsOutlined.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/public/fonts/SplineSans-400.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/MaterialSymbolsOutlined.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/SplineSans-400.woff2" as="font" type="font/woff2" crossorigin>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pomodoro Focus | Timer & Focus Tool</title>
   <meta name="description"
